--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,6 +1,7 @@
 $primary-font: 'Open Sans', sans-serif;  
 $secondary-font: 'Dosis', sans-serif;  
 $main-blue: #337ab7;
+$footer-height: 45px;
 
 .navbar-default {
   font-family: $secondary-font;
@@ -16,4 +17,31 @@ $main-blue: #337ab7;
   font-size: 30px;
   letter-spacing: 2px;
   color: $main-blue;
+}
+
+
+/* Styles go here */
+
+/* Sticky footer styles
+-------------------------------------------------- */
+
+html,
+body {
+  height: 100%;
+  /* The html and body elements cannot have any padding or margin. */
+}
+
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -45px;
+  /* Pad bottom by footer height */
+  padding: 0 0 45px;
+}
+
+/* Set the fixed height of the footer here */
+.footer {
+  height: $footer-height;
 }
