--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,33 +7,19 @@
   <%= csrf_meta_tags %>
   
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans:300,400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="app/assets/stylesheet/master.css">
+  <link rel="stylesheet" type="text/css" href="app/assets/stylesheet/master.css">
   
 </head>
 <body>
-<nav class="navbar navbar-default">
+<div id = "wrap">
+  <%= render 'shared/nav' %><!--Navbar-->
+  
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Ideator</a>
-    </div>
+    <%= yield %>
+  </div>
+</div><!-- Wrap -->
 
-    <!-- The nav links for toggling -->
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">All Ideas</a></li>
-        <li><a href="#">Inspire me</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </div><!-- /.navbar-close -->
-  </div><!-- /.container-->
-</nav>
-
-<%= yield %>
+<%= render 'shared/foot' %>
 
 </body>
 </html>
