--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,14 @@
   <%= csrf_meta_tags %>
   
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans:300,400,600,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="app/assets/stylesheet/master.css">
+  <link rel="stylesheet" type="text/css" href="/app/assets/stylesheet/master.css">
   
 </head>
 <body>
 <div id = "wrap">
   <%= render 'shared/nav' %><!--Navbar-->
   
-  <div class="container">
+  <div class="container1">
     <%= yield %>
   </div>
 </div><!-- Wrap -->
