--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,9 +1,23 @@
-<div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="/">Ideator</a>
-  </div><!-- navbar-header -->
+<nav class="navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Ideator</a>
+      </div>
+  
+      <!-- The nav links for toggling -->
+      <div class="menu">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">All Ideas</a></li>
+          <li><a href="#">Inspire me</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </div>
+    </div><!-- /.navbar-close -->
+    </div><!-- /.container-->
+  </nav>
