--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -12,7 +12,7 @@ $footer-height: 45px;
     font-family: $primary-font;
 }
 
-.navbar-header .navbar-brand {
+.navbar-default .navbar-brand {
   font-weight: 100; 
   font-size: 30px;
   letter-spacing: 2px;
