--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,6 +1,10 @@
 <% @ideas.each do |idea| %>
-    <h3><%= idea.content %></h3>
-    <h4><%= idea.author %></h4>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <blockquote>
+        <p><%= idea.content %></p>
+        <small>by <%= idea.author %></small>
+      </blockquote> 
+    </div>
+  </div>
 <% end %>
-    
-
