--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,12 @@
 <body>
 <div id = "wrap">
   <%= render 'shared/nav' %><!--Navbar-->
-  
-  <div class="container1">
+  <div class="container">
     <%= yield %>
   </div>
 </div><!-- Wrap -->
 
-<%= render 'shared/foot' %>
+<%= render 'shared/foot' %><!--Footer-->
 
 </body>
 </html>
