--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">Ideator</a>
-      </div>
+      </div><!--navbar-header-->
   
       <!-- The nav links for toggling -->
       <div class="menu">
@@ -17,7 +17,6 @@
           <li><a href="#">Inspire me</a></li>
           <li><a href="#">About</a></li>
         </ul>
-      </div>
-    </div><!-- /.navbar-close -->
+      </div><!--Menu-->
     </div><!-- /.container-->
-  </nav>
+</nav>
