--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,3 +1,9 @@
+<%= simple_form_for Idea.new do |f| %>
+    <%= f.input :content %>
+    <%= f.input :author %>
+    <%= f.submit 'Submit' %>
+<% end %>
+<br/>
 <% @ideas.each do |idea| %>
   <div class="panel panel-default">
     <div class="panel-body">
