--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for Idea.new do |f| %>
     <%= f.input :content %>
     <%= f.input :author %>
-    <%= f.submit 'Submit' %>
+    <%= f.submit 'Submit', class: 'btn btn-primary' %>
 <% end %>
 <br/>
 <% @ideas.each do |idea| %>
