--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,7 +1,7 @@
+<div class="modal-body">
 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
   Add Idea
 </button>
-
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
@@ -22,6 +22,7 @@
       <% end %>
     </div>
   </div>
+</div>
 </div>
 
 <% @ideas.each do |idea| %>
