--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,17 @@
 </head>
 <body>
 <div id = "wrap">
+  
   <%= render 'shared/nav' %><!--Navbar-->
   <br>
-  <div class="container">
-    <%= yield %>
+  
+  <div class = "container">
+    <div class = "row">
+      <div class = "col-xs-12 col-md-10 col-md-offset-1">
+        <%= render 'shared/flash_messages' %>
+        <%= yield %>
+      </div>
+    </div>
   </div>
 </div><!-- Wrap -->
 
