--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,14 +1,15 @@
 <div class="modal-body">
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add Idea
-</button>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+      <i class="fa fa-plus" aria-hidden="true"></i> Add Idea
+    </button>
+</div>
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Add Idea</h4>
       </div>
       <%= simple_form_for Idea.new do |f| %>
         <div class="modal-body">
@@ -23,7 +24,6 @@
     </div>
   </div>
 </div>
-</div>
 
 <% @ideas.each do |idea| %>
   <div class="panel panel-default">
@@ -32,7 +32,6 @@
         <p><%= idea.content %></p>
         <small>by <%= idea.author %></small>
       </blockquote> 
-      <br>
       
       <div class="btn-group" role="group">
           <%= link_to 'Delete', idea_path(idea), method: :delete, class: 'btn btn-sm btn-danger', data: {confirm: "Are you sure?"} %>
