--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,3 +1,4 @@
+  <div class="navbar-default">  
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -5,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Ideator</a>
+      <a class="navbar-brand" href="/"><i class="fa fa-hand-o-right" aria-hidden="true"></i> Ideator</a>
     </div>
     
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -14,4 +15,5 @@
         <li><%= link_to 'Inspire Me', random_path %></li>
         <li><%= link_to 'About', about_path %></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
+    </div>
+  </div>
