--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,6 @@
+<div class="about">
 <h1>About</h1>
-
+<hr>
 <h4>Share your ideas with the world and find others.</h4>
 
 <p>
@@ -28,3 +29,4 @@
   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
+</div>
