--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   
   <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/app/assets/stylesheet/master.css">
-  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Neucha" rel="stylesheet">
   
 </head>
 <body>
@@ -25,6 +25,7 @@
       </div>
     </div>
   </div>
+  
 </div><!-- Wrap -->
 
 <%= render 'shared/foot' %><!--Footer-->
