--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="about">
+<div class="about" align="justify">
 <h1>About</h1>
 <hr>
 <h4>Share your ideas with the world and find others.</h4>
@@ -29,4 +29,5 @@
   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
+<hr>
 </div>
