--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -9,10 +9,16 @@ $footer-height: 45px;
 .navbar-default {
   font-family: $secondary-font;
   background-color: white;
+  border-radius: 4px;
+  padding-bottom:10px;
 }
 
 .navbar-brand {
   font-family: $primary-font;
+}
+
+.collapse {
+  padding-top:5px;
 }
 
 body {
