--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -10,7 +10,6 @@ $footer-height: 45px;
   font-family: $secondary-font;
   background-color: white;
   border-radius: 4px;
-  padding-bottom:10px;
 }
 
 .navbar-brand {
@@ -29,12 +28,14 @@ body {
 .navbar-header .navbar-brand {
   font-weight: 100; 
   font-size: 30px;
-  letter-spacing: 2px;
+  letter-spacing: 4px;
   color: $main-blue;
+  margin-bottom:5px;
 }
 
 .panel {
-  background-color: rgba(255,255,255,8);
+  background-color: rgb(255,255,255);
+  opacity:50%;
 }
 
 h1 {
